ZumZumFinancials_Dev1/src/objects/DataTypeHelper__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DataTypeHelper (Customer Account)</relationshipLabel>
        <relationshipName>DataTypeHelper1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <label>Supplier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DataTypeHelper</relationshipLabel>
        <relationshipName>DataTypeHelper</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DataTypeHelper</label>
    <nameField>
        <label>DataTypeHelper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataTypeHelper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>